Changed permission strings to constants and added another string to messages.yml.